examples/datalog/14_aggregations/56_count_distinct_global.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_cd_global
Knowledge graph 'test_cd_global' created.
Switched to knowledge graph: test_cd_global
> .kg use test_cd_global
Switched to knowledge graph: test_cd_global
> +events[("click",), ("view",), ("click",), ("purchase",), ("view",), ("click",)].
Inserted 3 fact(s) into 'events'.
> unique_events(<COUNT_DISTINCT:E>) :- events(E).
Script error: Parse error: Unknown aggregate function: 
